--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-stylus": "^0.20.0",
-    "grunt-contrib-uglify": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-uglify": "^0.8.0"
   }
 }
