--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-stylus": "^0.20.0",
+    "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-uglify": "^0.8.0"
   }
 }
