--- a/theme.toml
+++ b/theme.toml
@@ -2,5 +2,6 @@ author = "Thomas Girard"
 description = "A light, multi-device and accessible template"
 license = "MIT"
 name = "aeris"
+version = "0.2.0"
 source_repo = "https://github.com/vuzonp/hugo-theme-aeris"
 tags = ["blog", "responsive", "WCAG AA", "1 column"]
